firewood/firewood-macros/tests/compile_fail/invalid_args.stderr
error: Expected string literal(s) for metric name and optional description
 --> tests/compile_fail/invalid_args.rs:4:11
  |
4 | #[metrics(123)]
  |           ^^^
